--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,4 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@400;700&display=swap");
 
-@config "../../tailwind.config.js"
+@config "../../tailwind.config.js";
